# musicctl

./: Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs  plugin.rs
src/plugin/: mpris.rs  radiotray.rs  shairportsync.rs
