[package]
name = "musicctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive", "wrap_help"] }
futures = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
